fixed update entry queries todo: add delete entry funcs && fix alert styling/alert z-index

--- a/webForms/css/main.css
+++ b/webForms/css/main.css
@@ -16,28 +16,36 @@ html{
   max-width: 1140px;
   margin: 0 auto;
 }
-
+.modal{
+  backdrop: false;
+}
+.main-close,.main-delete{
+  color:red;
+  font-family: 'Crimson Text', serif;
+}
 h1,
 h2,
-h3{
+h3,h4{
 
   font-weight: 300;
-  text-transform: uppercase;
+
+  color:#57606f;
+  font-family: 'Crimson Text', serif;
 }
 
 h1{
   margin-top: 0;
   margin-bottom: 20px;
-  color: white;
+  color: #dfe4ea;
   font-size: 500%;
   word-spacing: 4px;
   letter-spacing: 1px;
 }
 h3,h4{
-  color: white;
+  color: #dfe4ea;
 }
 p{
-  color: white;
+  color: #dfe4ea;
 }
 
 /*Header*/
@@ -53,10 +61,14 @@ html{
 
   }
 
+
   .alert-container{
     padding-right: 200px;
   }
-
+  .main{
+    font-family: 'Crimson Text', serif;
+    color: #f1f2f6;
+  }
   .headerImage-text-box{
 
   padding-left: 200px;
